# transport_frames

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  connectivity_mapping.ipynb  metadata.yaml  pyproject.toml  reg_availability.ipynb  requirements.txt  setup.py
.github/workflows/: documentation.yaml  publish_to_pypi.yml  test_on_push.yaml
Polina/: availability_estimation.py  corridor_builder.py  graphbuilder_v2.py  indicators.py  test_corridors.ipynb  test_node_extractor.ipynb
Roma/: final.ipynb  graphbuilder_v2.ipynb  graphbuilder_v2.py  is_exit.ipynb  skeleton.ipynb  union_roads.ipynb  Средняя доступность.ipynb
Roma/examples/: graphbuilder_v2.ipynb  Расчет Москвы.ipynb
data/: 18_centers.geojson
docs/: conf.py  index.rst  src.frame_grader.rst  src.framebuilder.rst  src.graphbuilder.rst  src.indicators.rst  src.models.rst  src.road_adder.rst  src.rst  src.utils.rst
example_data/: project Светогорского поселения.geojson  project Шлиссельбург.geojson
notebooks/: adder_example.ipynb  effects.ipynb  gigatest2.ipynb  indicators_calculate.ipynb  pipeline.ipynb  pipeline_LO.ipynb  pipeline_tula.ipynb  preprocessing+pipe copy.ipynb  preprocessing+pipe.ipynb  preprocessing+pipe — копия.ipynb  projecting.ipynb  simplify.ipynb  test_gb.ipynb  test_gdfs.ipynb  validation_example.ipynb  Расчет Москвы.ipynb
notebooks/Roma/: blocksnet_builder.py
notebooks/deprecated/: gigatest2.ipynb  pipeline.ipynb  projecting.ipynb  projecting_copy.ipynb
notebooks/deprecated_notebooks/Polina/: grade_territory.py  indicators.py
notebooks/deprecated_notebooks/Roma/: blocksnet_builder.py  criteria.py  graphbuilder_v2.py  Расчет Москвы.ipynb
notebooks/deprecated_notebooks/Roma/examples/: availability_estimation.py
src/frame_grader/: advanced_grade.py
src/framebuilder/: frame.py
src/graphbuilder/: graph.py  road_classifier.py
src/indicators/: indicator_area.py  indicator_terr.py  utils.py
src/models/: graph_validation.py  polygon_validation.py  schema.py
src/road_adder/: road_adder.py
src/tests/: test_availability_estimation.py
src/utils/: constant_road_vars.py  helper_funcs.py
tests/: test_availability_estimation.py  test_transport_frames.py
transport_frames/: pipeline.ipynb  test_gb.ipynb
transport_frames/Polina/: grade_territory.py  indicators.py
transport_frames/Roma/: availability_estimation.py
transport_frames/constants/: constant_osm_tags.py  constant_road_vars.py
transport_frames/data/: Аэродром Сиверск .geojson  Аэродром лодейнопольское поселение.geojson
transport_frames/frame_grader/: advanced_grade.py
transport_frames/framebuilder/: frame.py
transport_frames/graph_builder/: availability_estimation.py  blocksnet_builder.py
transport_frames/graphbuilder/: graph.py  road_classifier.py
transport_frames/indicators/: indicator_area.py  indicator_terr.py  utils.py
transport_frames/metrics/: indicators.py
transport_frames/models/: graph_validation.py  polygon_validation.py
transport_frames/new_modules/: interpretation.ipynb  test_gb.ipynb
transport_frames/new_modules/framebuilder/: frame.py
transport_frames/new_modules/graphbuilder/: graph.py  road_classifier.py
transport_frames/new_modules/indicators/: indicator_area.py  indicator_terr.py  utils.py
transport_frames/new_modules/models/: graph_validation.py  polygon_validation.py  schema.py
transport_frames/new_modules/road_adder/: adder_example.ipynb  road_adder.py
transport_frames/new_modules/utils/: helper_funcs.py
transport_frames/new_modules/сarcas_grader/: advanced_grade.py
transport_frames/plotter/: plot_maker.py
transport_frames/road_adder/: adder_example.ipynb  road_adder.py
transport_frames/src/graph_builder/: availability_estimation.py  blocksnet_builder.py  criteria.py  graphbuilder.py
transport_frames/src/metrics/: grade_territory.py  indicators.py
transport_frames/src/plotter/: plot_maker.py
transport_frames/transport_provision/: transport_provision.py
transport_frames/utils/: adj_calc.py  helper_funcs.py
