[tool.poetry]
name = "transport-frames"
version = "0.1.0"
description = ""
authors = ["george.kontsevik <george.kontsevik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.4"
osmnx = "^1.9.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
shapely = "^2.0.4"
dongraphio = "^0.3.9"
matplotlib = "^3.9.0"
setuptools = "^70.0.0"
pip = "^24.0"
ipykernel = "^6.29.4"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
