[tool.poetry]
name = "transport-frames"
version = "0.1.0"
description = ""
authors = ["george.kontsevik <george.kontsevik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
geopandas = "^0.14.4"
osmnx = "^1.9.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
shapely = "^2.0.5"
dongraphio = "^0.3.9"
matplotlib = "^3.9.0"
setuptools = "^70.0.0"
pip = "^24.0"
ipykernel = "^6.29.4"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
click = "^8.1.7"
pydantic = "^2.9.1"
iduedu = "^0.1.2"
momepy = "^0.8.0"
pandera = "^0.20.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

sphinx = "^7.2.7"
sphinx-rtd-theme = "^2.0.0"  # Тема ReadTheDocs, можно заменить на другую
sphinxcontrib-napoleon = "^0.7"  # Поддержка docstrings в стиле Google и NumPy


[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]